feat: improve DTOs with MapStruct