@@ -1,19 +1,20 @@
 package com.buruadam.financialtracker.service;
 
-import com.buruadam.financialtracker.dto.CategoryRequest;
-import com.buruadam.financialtracker.dto.CategoryResponse;
+import com.buruadam.financialtracker.dto.category.CategoryCreateRequest;
+import com.buruadam.financialtracker.dto.category.CategoryResponseDto;
 import com.buruadam.financialtracker.entity.Category;
 import com.buruadam.financialtracker.entity.User;
 import com.buruadam.financialtracker.exception.ResourceAlreadyExistsException;
 import com.buruadam.financialtracker.exception.ResourceNotFoundException;
+import com.buruadam.financialtracker.mapper.CategoryMapper;
 import com.buruadam.financialtracker.repository.CategoryRepository;
 import com.buruadam.financialtracker.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -21,35 +22,32 @@ public class CategoryService {
 
     private final CategoryRepository categoryRepository;
     private final UserRepository userRepository;
+    private final CategoryMapper categoryMapper;
 
-    public CategoryResponse createCategory(CategoryRequest request, UUID userId) {
+    @Transactional
+    public CategoryResponseDto createCategory(CategoryCreateRequest request, UUID userId) {
         User currentUser = userRepository.findById(userId)
                 .orElseThrow(() -> new ResourceNotFoundException("User not found"));
 
-        categoryRepository.findByUserIdAndNameAndType(currentUser.getId(), request.name(), request.type())
-                .ifPresent(_ -> {
-                    throw new ResourceAlreadyExistsException(
-                            String.format("Category already exists with name '%s' and type '%s'", request.name(), request.type())
-                    );
+        boolean exists = categoryRepository.existsByUserIdAndNameAndType(userId, request.name(), request.type());
+        if (exists) {
+            throw new ResourceAlreadyExistsException("Category with this name and type already exists for this user");
+        }
 
-                });
-
-        Category category = new Category();
-        category.setName(request.name());
-        category.setType(request.type());
+        Category category = categoryMapper.toEntity(request);
         category.setUser(currentUser);
 
         Category savedCategory = categoryRepository.save(category);
 
-        return new CategoryResponse(savedCategory.getId(), savedCategory.getName(), savedCategory.getType());
+        return categoryMapper.toResponseDto(savedCategory);
     }
 
-    public List<CategoryResponse> getAllCategories(UUID userId) {
-        User currentUser = userRepository.findById(userId)
-                .orElseThrow(() -> new ResourceNotFoundException("User not found"));
+    @Transactional(readOnly = true)
+    public List<CategoryResponseDto> getMyCategories(UUID userId) {
+        List<Category> categories = categoryRepository.findByUserId(userId);
 
-        return categoryRepository.findByUser(currentUser).stream()
-                .map(category -> new CategoryResponse(category.getId(), category.getName(), category.getType()))
-                .collect(Collectors.toList());
+        return categories.stream()
+                .map(categoryMapper::toResponseDto)
+                .toList();
     }
 }
